UI Changes and functionality tweaks
Change log:
1. Updated the UI
2. Created apk file
3. Added functionality to give FFT value from 256 frames

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">MyOpenCV_try1</string>
-    <string name="Title">My Open Cv App</string>
-    <string name="Data1">Data1 : Value</string>
-    <string name="Data2">Data2 : Value</string>
-    <string name="Data3">Data3 : Value</string>
-    <string name="Data4">Data4 : Value</string>
+    <string name="app_name">PPG</string>
+    <string name="Title">PPG Heart Rate Monitor</string>
+    <string name="Data1">Frame #</string>
+    <string name="Data2">Frame Size</string>
+    <string name="Data3">AVG</string>
+    <string name="Data4">Caculating</string>
 </resources>
