--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="Data1">Frame #</string>
     <string name="Data2">Frame Size</string>
     <string name="Data3">AVG</string>
-    <string name="Data4">Caculating</string>
+    <string name="Data4">Calculating</string>
 </resources>
